[gd_scene load_steps=2 format=3 uid="uid://chat_screen_scene"]

[ext_resource type="Script" path="res://ui/chat_screen.gd" id="1"]

[node name="ChatScreen" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TopBar" type="HBoxContainer" parent="VBox"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="BackButton" type="Button" parent="VBox/TopBar"]
unique_name_in_owner = true
layout_mode = 2
text = "‚Üê"

[node name="Avatar" type="TextureRect" parent="VBox/TopBar"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="ContactInfo" type="VBoxContainer" parent="VBox/TopBar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="ContactName" type="Label" parent="VBox/TopBar/ContactInfo"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "–Ü–º'—è –ö–æ–Ω—Ç–∞–∫—Ç—É"

[node name="ContactStatus" type="Label" parent="VBox/TopBar/ContactInfo"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "–±—É–≤(–ª–∞) –Ω–µ–¥–∞–≤–Ω–æ"

[node name="MoreButton" type="Button" parent="VBox/TopBar"]
layout_mode = 2
text = "‚ãÆ"

[node name="HSeparator" type="HSeparator" parent="VBox"]
layout_mode = 2

[node name="MessagesContainer" type="ScrollContainer" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
follow_focus = true
scroll_following = true

[node name="MessagesList" type="VBoxContainer" parent="VBox/MessagesContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="HSeparator2" type="HSeparator" parent="VBox"]
layout_mode = 2

[node name="InputBar" type="HBoxContainer" parent="VBox"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_constants/separation = 8

[node name="AttachButton" type="Button" parent="VBox/InputBar"]
layout_mode = 2
text = "üìé"

[node name="MessageInput" type="LineEdit" parent="VBox/InputBar"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "–ù–∞–ø–∏—à—ñ—Ç—å –ø–æ–≤—ñ–¥–æ–º–ª–µ–Ω–Ω—è..."
clear_button_enabled = true

[node name="SendButton" type="Button" parent="VBox/InputBar"]
unique_name_in_owner = true
layout_mode = 2
text = "‚û§"
